# luan_teste

./: 00_hello_wall.ipynb  04_hello_ifc.ipynb  05_1_ifc_documentation.ipynb  05_1_ifc_documentation_no_viz.ipynb  output.ifc  pyproject.toml  test.ipynb  teste.py
data/: cube_single.ifc.cache.blend  cube_single.ifc.cache.json  cube_single.ifc.cache.sqlite  teste_casa_ifc.ifc  teste_casa_ifc.ifc.cache.blend  teste_casa_ifc.ifc.cache.json  teste_casa_ifc.ifc.cache.sqlite
ifc_examples/: Ifc Custom Type.py  example_ifcopenshell.py  ifc_custom_class.md  import ifcopenshell.py
