[tool.poetry]
name = "luan-teste"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
ifcopenshell = "^0.7.10"
networkx = "^3.3"
graphviz = "^0.20.3"
jsonpickle = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
fake-bpy-module = "^20240717"
pythreejs = "^2.4.2"
ipywidgets = "^8.1.3"
notebook = "^7.2.1"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
